[gd_scene load_steps=2 format=3 uid="uid://cfhm3xlcvn8ru"]

[ext_resource type="Script" path="res://GDScripts/Others/Managers/quest_manager.gd" id="1_8c37l"]

[node name="QuestManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8c37l")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -212.0
offset_right = 352.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2

[node name="Quests" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 72.0
offset_right = -496.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestLog" type="VBoxContainer" parent="Panel/Quests"]
layout_mode = 2

[node name="About" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 288.0
offset_top = 72.0
offset_right = 704.0
offset_bottom = 424.0

[node name="QuestTitle" type="Label" parent="Panel/About"]
layout_mode = 0
offset_right = 416.0
offset_bottom = 23.0

[node name="QuestDescription" type="Label" parent="Panel/About"]
layout_mode = 0
offset_top = 112.0
offset_right = 416.0
offset_bottom = 352.0
